2013-02-11  Vanessa Gil <vanessa.gil@artica.es>

	* include/styles/integria.css
	  operation/incidents/incident_detail.php: Changed custom
	fields style.

2013-02-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php: Improved print_input_image function.
	
	* include/functions_config.php
     include/config_process.php: Added development by pass var.
	
	* include/functions_objects.php: Function library for inventory 
	objects.
	
	* index.php: Fixed non-initialized variables.
	
	* operation/side_menu.php: Changed menu for new object views.
	
	* operation/inventories/manage_objects.php
	 operation/inventories/manage_objects_types_list.php
	 operation/inventories/manage_objects_types_field.php: Added views
	 for manage object and fields of inventories.

	* images/objects: Added images.

	* integria_db.sql
	  integria_demo.sql
	  extras/migrate.sql: Added objcet new tables and fields and removed
	  inventories.
 
	* godmode/setup/incidents_setup.php
	 godmode/setup/setup.php
	 godmode/setup/setup_mail.php
	 godmode/setup/setup_pandora.php
	 godmode/setup/setup_auth.php
	 godmode/setup/setup_mailtemplates.php
	 godmode/setup/setup_visual.php: Removed link to inventory fields old
	 view.

	* godmode/setup/inventories_setup.php: Deleted old view.

2013-02-08  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/incident_type_filed.php: Changed
	help tip.

2013-02-07  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/usuarios/import_from_csv.php
	  include/functions_user.php
	  include/help/en/help_import_from_csv: Import users
	from cvs file.

	* extras/import_users_from_csv.php
	  extras/config_file.conf: Added files.Script to import
	 users from csv file.

2013-02-07  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident.php: Fixed an error in ajax
	of incident tabs.

2013-02-07  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident.php: Fixed a hint showing