@@ -1,5 +1,12 @@
 2013-02-11  Vanessa Gil <vanessa.gil@artica.es>
 
+	* include/functions_db.php
+	  include/functions_incidents.php
+	  operation/incidents/incident_search.php: Fixed bug: 
+	"Pending on a third person" status is marked as closed in UI.
+
+2013-02-11  Vanessa Gil <vanessa.gil@artica.es>
+
 	* include/styles/integria.css
 	  operation/incidents/incident_detail.php: Changed custom
 	fields style.
